--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
   "name": "tightenco/presets",
   "require": {
-    "laravel/framework": "5.6.*"
+    "laravel/framework": "5.6.*",
+    "tightenco/presets": "@dev"
   },
   "autoload": {
     "psr-4": {
       "Tightenco\\Presets\\": "src/"
     }
-  },
+  }
 }
