Add service provider auto discovery config

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,12 @@
     "psr-4": {
       "Tightenco\\Presets\\": "src/"
     }
+  },
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Tightenco\\Presets\\PresetsServiceProvider"
+      ]
+    }
   }
 }
