--- a/src/react-stubs/jest.config.json
+++ b/src/react-stubs/jest.config.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "test": "jest",
-    "test-watch": "npm run test -- --watch"
+    "test-watch": "npm run test -- --watchAll"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "./resources/assets/js/setupTests.js",
