--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "tightenco/presets",
+  "name": "tightenco/laravel-preset-jest",
   "require": {
     "laravel/framework": "5.6.*",
     "tightenco/presets": "@dev"
