--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "tightenco/laravel-preset-jest",
   "require": {
-    "laravel/framework": "5.6.*",
+    "laravel/framework": "5.6.*"
   },
   "autoload": {
     "psr-4": {
